started working on being able to create gamestatetes in db